# conduitpy

./: .gitignore  .styleguide  .styleguide-license  CMakeLists.txt  ConduitConfig.cmake.in  README.md  pyproject.toml
.github/workflows/: build-python.yml  lint-format.yml
conduitpy/: __init__.py
conduitpy/cpp/: binders.hpp  main.cpp
include/: .styleguide
include/conduit/: conduit_schema_generated.h  ds_reader.h  pdh_util.h  pdp_reader.h  pdp_util.h  system_reader.h  wpilibio.h
include/conduit/rev/: PDHFrames.h
src/: ds_reader.cc  pdp_reader.cc  pdp_util.cc  system_reader.cc  wpilibio.cc
